--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           {{range .Todos}} {{block "todo-list-element" .}}
           <li class="list-group-item bg-secondary text-white">
             <input
-              id="cb_{{.Task}}"
+              id="cb_{{.Id}}"
               type="checkbox"
               class="form-check-input"
               {{if
@@ -34,7 +34,7 @@
               checked
               {{end}}
             />
-            <label for="cb_{{.Task}}"> {{ .Task }} </label>
+            <label for="cb_{{.Id}}"> {{ .Task }} </label>
           </li>
           {{ end }} {{ end }}
         </ul>
@@ -51,12 +51,7 @@
         >
           <div class="mb-2">
             <label for="task-name">Task</label>
-            <input
-              type="text"
-              name="task"
-              id="task-name"
-              class="form-control"
-            />
+            <input type="text" name="task" id="task-name" class="form-control" />
           </div>
 
           <button type="submit" class="btn btn-primary">
