added todo update function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <input
               id="cb_{{.Id}}"
               type="checkbox"
+              hx-put="/update-todo/{{.Id}}"
               class="form-check-input"
               {{if
               .Done}}
