--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <tbody id="todo-list-body">
             {{range .Todos}} {{block "todo-list-element" .}}
             <tr id="tr_{{.Id}}">
-              <td style="width: 10px">
+              <td style="width: 30px">
                 <input
                   id="cb_{{.Id}}"
                   type="checkbox"
@@ -39,9 +39,24 @@
                 />
               </td>
               <td>
-                <label for="cb_{{.Id}}" class="form-check-label"> {{ .Task }} </label>
+                {{block "task-name" .}}
+                <label id="task-label_{{.Id}}" for="cb_{{.Id}}" class="form-check-label">
+                  {{ .Task }}
+                </label>
+                {{end}}
               </td>
-              <td class="text-end" style="width: 50px">
+
+              <td class="text-end" style="width: 250px">
+                <button
+                  id="btn_edit_{{.Id}}"
+                  hx-get="/edit-task/{{.Id}}"
+                  hx-swap="outerHTML"
+                  hx-target="#task-label_{{.Id}}"
+                  class="btn btn-primary"
+                  hx-target="#tr_{{.Id}}"
+                >
+                  Edit
+                </button>
                 <button
                   id="btn_{{.Id}}"
                   hx-delete="/remove-todo/{{.Id}}"
