--- a/index.html
+++ b/index.html
@@ -23,53 +23,7 @@
         <h1 class="mb-4">Current Todos</h1>
 
         <table class="table table-striped align-middle" id="todo-list-table">
-          <tbody id="todo-list-body">
-            {{range .Todos}} {{block "todo-list-element" .}}
-            <tr id="tr_{{.Id}}">
-              <td style="width: 30px">
-                <input
-                  id="cb_{{.Id}}"
-                  type="checkbox"
-                  hx-put="/update-todo/{{.Id}}"
-                  class="form-check-input"
-                  {{if
-                  .Done}}
-                  checked
-                  {{end}}
-                />
-              </td>
-              <td>
-                {{block "task-name" .}}
-                <label id="task-label_{{.Id}}" for="cb_{{.Id}}" class="form-check-label">
-                  {{ .Task }}
-                </label>
-                {{end}}
-              </td>
-
-              <td class="text-end" style="width: 250px">
-                <button
-                  id="btn_edit_{{.Id}}"
-                  hx-get="/edit-task/{{.Id}}"
-                  hx-swap="outerHTML"
-                  hx-target="#task-label_{{.Id}}"
-                  class="btn btn-primary"
-                  hx-target="#tr_{{.Id}}"
-                >
-                  Edit
-                </button>
-                <button
-                  id="btn_{{.Id}}"
-                  hx-delete="/remove-todo/{{.Id}}"
-                  hx-swap="delete"
-                  class="btn btn-danger"
-                  hx-target="#tr_{{.Id}}"
-                >
-                  Remove
-                </button>
-              </td>
-            </tr>
-            {{ end }} {{ end }}
-          </tbody>
+          <tbody id="todo-list-body"></tbody>
         </table>
       </div>
 
@@ -84,7 +38,13 @@
         >
           <div class="mb-2">
             <label for="task-name">Task</label>
-            <input type="text" required name="task" id="task-name" class="form-control" />
+            <input
+              type="text"
+              required
+              name="task"
+              id="task-name"
+              class="form-control"
+            />
           </div>
 
           <button type="submit" class="btn btn-primary">
