added view and edit row template

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <h1 class="mb-4">Current Todos</h1>
 
         <table class="table table-striped align-middle" id="todo-list-table">
-          <tbody id="todo-list-body"></tbody>
+          <tbody id="todo-list-body">
+            <!-- rows will be inserted using templates templates folder -->
+          </tbody>
         </table>
       </div>
 
