--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <table class="table table-striped align-middle" id="todo-list-table">
           <tbody id="todo-list-body">
-            <!-- rows will be inserted using templates templates folder -->
+            <!-- rows will be inserted using templates located in templates folder -->
           </tbody>
         </table>
       </div>
@@ -40,13 +40,7 @@
         >
           <div class="mb-2">
             <label for="task-name">Task</label>
-            <input
-              type="text"
-              required
-              name="task"
-              id="task-name"
-              class="form-control"
-            />
+            <input type="text" required name="task" id="task-name" class="form-control" />
           </div>
 
           <button type="submit" class="btn btn-primary">
