renamed functions and endpoints

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <td class="text-end" style="width: 250px">
                 <button
                   id="btn_edit_{{.Id}}"
-                  hx-get="/edit-task/{{.Id}}"
+                  hx-get="/start-update/{{.Id}}"
                   hx-swap="outerHTML"
                   class="btn btn-primary d-print-none"
                   hx-target="#tr_{{.Id}}"
