moved templates in todo folder

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <h1 class="mb-4">Add todo</h1>
 
         <form
+          id="add_todo_form"
           hx-post="/add-todo/"
           hx-target="#todo-list-body"
           hx-swap="beforeend"
